--- a/index.html
+++ b/index.html
@@ -272,8 +272,10 @@
         <div class="mt-2">Prototype demo. Not connected to real services.</div>
       </div>
     </footer>
-
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./env.js"></script>
+    <script type="module" src="./vendor/bootstrap/js/supabaseClient.js"></script>
     <script src="assets/js/app.js"></script>
   </body>
 </html>
