--- a/pages/profile.html
+++ b/pages/profile.html
@@ -10,6 +10,138 @@
     <link rel="icon" href="/assets/images/Favicon.png" type="image/x-icon">
   </head>
   <body>
+    <script type="module">
+      import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
+
+      const SUPABASE_URL = 'https://peexuuzunrhbimpemdwz.supabase.co';
+      const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBlZXh1dXp1bnJoYmltcGVtZHd6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjAxMzk3MjYsImV4cCI6MjA3NTcxNTcyNn0.sOOZfxsQvBF35vijxgO3K5nedKww0fyWKBXiebyfAB0';
+      const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+
+      document.addEventListener("DOMContentLoaded", async () => {
+        const storedUser = localStorage.getItem("loggedInUser");
+        if (!storedUser) {
+          alert("Please log in first!");
+          window.location.href = "login.html";
+          return;
+        }
+        const { email } = JSON.parse(storedUser);
+
+        // Load student info
+        const { data: student, error } = await supabase
+          .from("students")
+          .select("*")
+          .eq("email", email)
+          .single();
+        if (error) return console.error(error);
+
+        // Set placeholders and current values
+        const fullNameInput = document.getElementById("fullName");
+        const programmeInput = document.getElementById("programme");
+        const emailInput = document.getElementById("email");
+        const profilePicPreview = document.getElementById("profilePicPreview");
+
+        fullNameInput.value = student.full_name || "";
+        fullNameInput.placeholder = student.full_name || "Enter your full name";
+        programmeInput.value = student.programme || "";
+        emailInput.value = student.email || "";
+        if (student.profile_photo) profilePicPreview.src = student.profile_photo;
+
+        // Auto-promote to tutor if mark > 75
+        if (student.mark > 75 && !student.is_tutor) {
+          await supabase.from("students").update({ is_tutor: true }).eq("id", student.id);
+          alert("🎉 Congratulations! You are now a tutor!");
+        }
+
+        // Conditionally render tutor application section
+        const tutorApplicationSection = document.getElementById("clTutorApplication");
+        if (student.mark < 75) {
+          tutorApplicationSection.innerHTML = `
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Apply to Become a Tutor</h5>
+                <div class="alert alert-warning d-flex align-items-center" role="alert">
+                  <i class="fa-solid fa-exclamation-circle me-2"></i>
+                  <div>You are not eligible to apply as a tutor. A minimum mark of 75 is required.</div>
+                </div>
+              </div>
+            </div>
+          `;
+        } else {
+          // Render the tutor application form
+          document.getElementById("tutorApplicationForm").addEventListener("submit", async (e) => {
+            e.preventDefault();
+            const module = document.getElementById("tutorModule").value;
+            const qualifications = document.getElementById("tutorQualifications").value;
+            const motivation = document.getElementById("tutorMotivation").value;
+
+            const { error } = await supabase.from("tutors").insert({
+              user_id: student.id,
+              first_name: student.full_name.split(" ")[0],
+              last_name: student.full_name.split(" ").slice(1).join(" ") || "",
+              email: student.email,
+              modules: [module],
+              qualifications,
+              bio: motivation,
+              status: "pending"
+            });
+
+            if (error) alert("❌ Failed to submit tutor application");
+            else alert("✅ Tutor application submitted!");
+          });
+        }
+
+        // Save personal info
+        document.getElementById("personalInfoForm").addEventListener("submit", async (e) => {
+          e.preventDefault();
+          const updatedFullName = fullNameInput.value.trim();
+          const updatedProgramme = programmeInput.value.trim();
+
+          const { error } = await supabase
+            .from("students")
+            .update({ full_name: updatedFullName, programme: updatedProgramme })
+            .eq("id", student.id);
+
+          if (error) alert("❌ Failed to save info");
+          else alert("✅ Changes saved!");
+        });
+
+        // Load achievements
+        const { data: achievements } = await supabase
+          .from("achievements")
+          .select("*")
+          .eq("student_id", student.id);
+
+        const container = document.querySelector("#clAchievements .d-flex");
+        container.innerHTML = "";
+        achievements?.forEach(a => {
+          const div = document.createElement("div");
+          div.className = "text-center";
+          div.innerHTML = `<i class="${a.icon} fa-2x"></i><p class="small mt-2">${a.title}</p>`;
+          container.appendChild(div);
+        });
+
+        // Profile photo upload
+        document.getElementById("profilePicInput").addEventListener("change", async (e) => {
+          const file = e.target.files[0];
+          if (!file) return;
+
+          const fileExt = file.name.split('.').pop();
+          const fileName = `${student.id}.${fileExt}`;
+
+          const { data, error } = await supabase.storage
+            .from("profile-photos")
+            .upload(fileName, file, { upsert: true });
+
+          if (error) return alert("❌ Upload failed!");
+
+          const { publicUrl } = supabase.storage.from("profile-photos").getPublicUrl(fileName);
+          await supabase.from("students").update({ profile_photo: publicUrl }).eq("id", student.id);
+          profilePicPreview.src = publicUrl;
+          alert("✅ Profile photo updated!");
+        });
+      });
+    </script>
+
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
       <div class="container">
         <a class="navbar-brand fw-bold" href="index.html">CampusLearn<span class="text-primary">™</span></a>
@@ -43,7 +175,7 @@
             <div class="d-flex align-items-center gap-3">
               <img id="profilePicPreview" src="https://images.unsplash.com/photo-1522075469751-6603f39547f5" alt="Profile Picture" class="rounded-circle" style="width: 100px; height: 100px; object-fit: cover;">
               <div>
-                <input type="file" class="form-control mb-2" accept="image/*" id="profilePicInput" onchange="updateProfilePic()">
+                <input type="file" class="form-control mb-2" accept="image/*" id="profilePicInput">
                 <button class="btn btn-outline-primary btn-sm">Upload New Picture</button>
               </div>
             </div>
@@ -55,30 +187,22 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Personal Information</h5>
-            <form class="row g-3">
+            <form id="personalInfoForm" class="row g-3">
               <div class="col-md-6">
-                <label class="form-label">First Name</label>
-                <input class="form-control" value="Fourie">
-              </div>
-              <div class="col-md-6">
-                <label class="form-label">Last Name</label>
-                <input class="form-control" value="van der Walt">
+                <label class="form-label">Full Name</label>
+                <input id="fullName" class="form-control" placeholder="Enter your full name">
               </div>
               <div class="col-md-6">
                 <label class="form-label">Email</label>
-                <input class="form-control" value="name@belgiumcampus.ac.za" disabled>
+                <input id="email" class="form-control" disabled>
               </div>
               <div class="col-md-6">
                 <label class="form-label">Programme</label>
-                <select class="form-select">
-                  <option selected>BIT</option>
-                  <option>BCom</option>
-                  <option>Diploma</option>
+                <select id="programme" class="form-select">
+                  <option value="BIT">BIT</option>
+                  <option value="BCom">BCom</option>
+                  <option value="Diploma">Diploma</option>
                 </select>
-              </div>
-              <div class="col-12">
-                <label class="form-label">Topics I Need Help With</label>
-                <input class="form-control" placeholder="Add topics (e.g., SE202, DB101)">
               </div>
               <div class="col-12">
                 <button class="btn btn-primary">Save Changes</button>
@@ -127,7 +251,7 @@
                 <input class="form-check-input" type="checkbox" id="sessionReminders" checked>
                 <label class="form-check-label" for="sessionReminders">Session reminder emails</label>
               </div>
-              <button class="btn btn-primary btn-sm">Save Notification Settings</button>
+              <button class="btn btn-primary btn-sm">Save Notification Preferences</button>
             </form>
           </div>
         </div>
@@ -164,10 +288,10 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Apply to Become a Tutor</h5>
-            <form class="row g-3">
+            <form id="tutorApplicationForm" class="row g-3">
               <div class="col-md-6">
                 <label class="form-label">Module</label>
-                <select class="form-select">
+                <select id="tutorModule" class="form-select">
                   <option>SE202</option>
                   <option>DB101</option>
                   <option>ITM300</option>
@@ -175,11 +299,11 @@
               </div>
               <div class="col-md-6">
                 <label class="form-label">Qualifications</label>
-                <input class="form-control" placeholder="e.g., Completed SE202 with 85%">
+                <input id="tutorQualifications" class="form-control" placeholder="e.g., Completed SE202 with 85%">
               </div>
               <div class="col-12">
                 <label class="form-label">Why do you want to tutor?</label>
-                <textarea class="form-control" rows="3" placeholder="Share your motivation…"></textarea>
+                <textarea id="tutorMotivation" class="form-control" rows="3" placeholder="Share your motivation…"></textarea>
               </div>
               <div class="col-12">
                 <button class="btn btn-primary">Submit Application</button>
