--- a/pages/profile.html
+++ b/pages/profile.html
@@ -11,124 +11,133 @@
   </head>
   <body>
     <script type="module">
-import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
+      import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
 
-const SUPABASE_URL = 'https://peexuuzunrhbimpemdwz.supabase.co';
-const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBlZXh1dXp1bnJoYmltcGVtZHd6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjAxMzk3MjYsImV4cCI6MjA3NTcxNTcyNn0.sOOZfxsQvBF35vijxgO3K5nedKww0fyWKBXiebyfAB0';
-const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+      const SUPABASE_URL = 'https://peexuuzunrhbimpemdwz.supabase.co';
+      const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBlZXh1dXp1bnJoYmltcGVtZHd6Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjAxMzk3MjYsImV4cCI6MjA3NTcxNTcyNn0.sOOZfxsQvBF35vijxgO3K5nedKww0fyWKBXiebyfAB0';
+      const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-document.addEventListener("DOMContentLoaded", async () => {
-  const storedUser = localStorage.getItem("loggedInUser");
-  if (!storedUser) {
-    alert("Please log in first!");
-    window.location.href = "login.html";
-    return;
-  }
-  const { email } = JSON.parse(storedUser);
+      document.addEventListener("DOMContentLoaded", async () => {
+        const storedUser = localStorage.getItem("loggedInUser");
+        if (!storedUser) {
+          alert("Please log in first!");
+          window.location.href = "login.html";
+          return;
+        }
+        const { email } = JSON.parse(storedUser);
 
-  // Load student info
-  const { data: student, error } = await supabase
-    .from("students")
-    .select("*")
-    .eq("email", email)
-    .single();
-  if (error) return console.error(error);
+        // Load student info
+        const { data: student, error } = await supabase
+          .from("students")
+          .select("*")
+          .eq("email", email)
+          .single();
+        if (error) return console.error(error);
 
-  const mark = Number(student.mark); // Convert mark to number
+        // Populate personal info fields
+        document.getElementById("fullName").value = student.full_name || "";
+        document.getElementById("email").value = student.email || "";
+        document.getElementById("programme").value = student.programme || "";
+        if (student.profile_photo) document.getElementById("profilePicPreview").src = student.profile_photo;
 
-  // Populate personal info fields
-  document.getElementById("fullName").value = student.full_name || "";
-  document.getElementById("email").value = student.email || "";
-  document.getElementById("programme").value = student.programme || "";
-  if (student.profile_photo) document.getElementById("profilePicPreview").src = student.profile_photo;
+        // Auto-promote if mark > 75 and not already a tutor
+        if (student.mark > 75 && !student.is_tutor) {
+          await supabase.from("students").update({ is_tutor: true }).eq("id", student.id);
+          alert("Congratulations! You are now a tutor!");
+        }
 
-  // Auto-promote if mark > 75 and not already a tutor
-  if (mark > 75 && !student.is_tutor) {
-    await supabase.from("students").update({ is_tutor: true }).eq("id", student.id);
-    alert("🎉 Congratulations! You are now a tutor!");
-  }
+        // Tutor application eligibility
+        const eligibilityAlert = document.getElementById("tutorEligibilityAlert");
+        if (student.mark < 75) {
+          // Show warning but do NOT disable the form
+          eligibilityAlert.classList.remove("d-none");
+        } else {
+          eligibilityAlert.classList.add("d-none");
+        }
 
-  // Tutor application eligibility
-  const eligibilityAlert = document.getElementById("tutorEligibilityAlert");
-  if (mark < 75) {
-    eligibilityAlert.classList.remove("d-none");
-  } else {
-    eligibilityAlert.classList.add("d-none");
-  }
+        // Tutor application submission
+        document.getElementById("tutorApplicationForm").addEventListener("submit", async e => {
+          e.preventDefault();
 
-  // Tutor application submission
-  document.getElementById("tutorApplicationForm").addEventListener("submit", async e => {
-    e.preventDefault();
-    if (mark < 75) return; // prevent submission for ineligible users
+          // Silently prevent submission for ineligible users
+          if (student.mark < 75) {
+            return; // No alert, rely on visible warning
+          }
 
-    const module = document.getElementById("tutorModule").value;
-    const qualifications = document.getElementById("tutorQualifications").value;
-    const motivation = document.getElementById("tutorMotivation").value;
+          const module = document.getElementById("tutorModule").value;
+          const qualifications = document.getElementById("tutorQualifications").value;
+          const motivation = document.getElementById("tutorMotivation").value;
 
-    const { error } = await supabase.from("tutors").insert({
-      user_id: student.id,
-      first_name: student.full_name.split(" ")[0],
-      last_name: student.full_name.split(" ").slice(1).join(" ") || "",
-      email: student.email,
-      modules: [module],
-      qualifications,
-      bio: motivation,
-      status: "pending"
-    });
+          const { error } = await supabase.from("tutors").insert({
+            user_id: student.id,
+            first_name: student.full_name.split(" ")[0],
+            last_name: student.full_name.split(" ").slice(1).join(" ") || "",
+            email: student.email,
+            modules: [module],
+            qualifications,
+            bio: motivation,
+            status: "pending"
+          });
 
-    alert(error ? "Failed to submit application" : "Tutor application submitted!");
-  });
+          alert(error ? "Failed to submit application" : "Tutor application submitted!");
+        });
 
-  // Personal info save
-  document.getElementById("personalInfoForm").addEventListener("submit", async e => {
-    e.preventDefault();
-    const updatedFullName = document.getElementById("fullName").value.trim();
-    const updatedProgramme = document.getElementById("programme").value.trim();
+        // Personal info save
+        document.getElementById("personalInfoForm").addEventListener("submit", async e => {
+          e.preventDefault();
+          const updatedFullName = document.getElementById("fullName").value.trim();
+          const updatedProgramme = document.getElementById("programme").value.trim();
 
-    const { error } = await supabase
-      .from("students")
-      .update({ full_name: updatedFullName, programme: updatedProgramme })
-      .eq("id", student.id);
+          const { error } = await supabase
+            .from("students")
+            .update({ full_name: updatedFullName, programme: updatedProgramme })
+            .eq("id", student.id);
 
-    alert(error ? "Failed to save info" : "✅ Changes saved!");
-  });
+          alert(error ? "Failed to save info" : "Changes saved!");
+        });
 
-  // Load achievements
-  const { data: achievements } = await supabase
-    .from("achievements")
-    .select("*")
-    .eq("student_id", student.id);
-  const container = document.querySelector("#clAchievements .d-flex");
-  container.innerHTML = "";
-  achievements?.forEach(a => {
-    const div = document.createElement("div");
-    div.className = "text-center";
-    div.innerHTML = `<i class="${a.icon} fa-2x"></i><p class="small mt-2">${a.title}</p>`;
-    container.appendChild(div);
-  });
+        // Load achievements
+        const { data: achievements } = await supabase
+          .from("achievements")
+          .select("*")
+          .eq("student_id", student.id);
+        const container = document.querySelector("#clAchievements .d-flex");
+        container.innerHTML = "";
+        achievements?.forEach(a => {
+          const div = document.createElement("div");
+          div.className = "text-center";
+          div.innerHTML = `<i class="${a.icon} fa-2x"></i><p class="small mt-2">${a.title}</p>`;
+          container.appendChild(div);
+        });
 
-  // Profile photo upload
-  document.getElementById("profilePicInput").addEventListener("change", async e => {
-    const file = e.target.files[0];
-    if (!file) return;
+        // Profile photo upload
+        document.getElementById("profilePicInput").addEventListener("change", async e => {
+          const file = e.target.files[0];
+          if (!file) return;
 
-    const fileExt = file.name.split('.').pop();
-    const fileName = `${student.id}.${fileExt}`;
+          const fileExt = file.name.split('.').pop();
+          const fileName = `${student.id}.${fileExt}`;
 
-    const { error } = await supabase.storage
-      .from("profile-photos")
-      .upload(fileName, file, { upsert: true });
+          const { error } = await supabase.storage
+            .from("profile-photos")
+            .upload(fileName, file, { upsert: true });
 
-    if (error) return alert("Upload failed!");
+          if (error) return alert("Upload failed!");
 
-    const { publicUrl } = supabase.storage.from("profile-photos").getPublicUrl(fileName);
-    await supabase.from("students").update({ profile_photo: publicUrl }).eq("id", student.id);
-    document.getElementById("profilePicPreview").src = publicUrl;
-    alert("✅ Profile photo updated!");
-  });
-});
-</script>
+          const { publicUrl } = supabase.storage.from("profile-photos").getPublicUrl(fileName);
+          await supabase.from("students").update({ profile_photo: publicUrl }).eq("id", student.id);
+          document.getElementById("profilePicPreview").src = publicUrl;
+          alert("Profile photo updated!");
+        });
 
+        // Logout button
+        document.getElementById("logoutButton").addEventListener("click", async () => {
+          await supabase.auth.signOut();
+          localStorage.removeItem("loggedInUser");
+          window.location.href = "login.html";
+        });
+      });
+    </script>
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
       <div class="container">
@@ -372,6 +381,18 @@ document.addEventListener("DOMContentLoaded", async () => {
               <li><i class="fa-solid fa-check me-2"></i>Submitted tutor application for DB101 • Yesterday</li>
               <li><i class="fa-solid fa-bell me-2"></i>Enabled email notifications • 2 days ago</li>
             </ul>
+          </div>
+        </div>
+      </section>
+
+      <section id="clLogout" class="mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Log Out</h5>
+            <p class="small text-muted mb-3">Click below to end your session and log out of CampusLearn™.</p>
+            <button id="logoutButton" class="btn btn-danger">
+              <i class="fa-solid fa-sign-out-alt me-2"></i>Log Out
+            </button>
           </div>
         </div>
       </section>
