--- a/pages/resources.html
+++ b/pages/resources.html
@@ -11,7 +11,8 @@
 
   <!-- App styles -->
   <link rel="icon" href="../assets/images/Favicon.png" />
-  <link rel="stylesheet" href="../assets/css/styles.css">
+  <link href="../assets/css/styles.css" rel="stylesheet">
+
 </head>
 
 <body class="bg-light">
@@ -27,18 +28,31 @@
     </div>
 
     <!-- Filters -->
-    <div class="d-flex flex-wrap gap-2 mb-3">
-      <select id="moduleFilter" class="form-select w-auto">
-        <option value="">All Modules</option>
-        <!-- Loaded dynamically -->
-      </select>
-      <select id="typeFilter" class="form-select w-auto">
-        <option value="">All Types</option>
-        <option value="pdf">PDF</option>
-        <option value="video">Video</option>
-        <option value="link">External Link</option>
-      </select>
-    </div>
+   <div class="d-flex flex-wrap gap-2 mb-3 align-items-center">
+
+  <!-- Quick Module dropdown -->
+  <div class="dropdown">
+    <button class="btn btn-success btn-sm dropdown-toggle" type="button" id="quickModuleBtn" data-bs-toggle="dropdown" aria-expanded="false">
+      Module
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="quickModuleBtn" id="quickModuleMenu">
+      <li><a class="dropdown-item" href="#" data-mod="">All Modules</a></li>
+      <!-- items injected by JS -->
+    </ul>
+  </div>
+
+  <select id="moduleFilter" class="form-select w-auto" aria-label="Filter by module">
+    <option value="">All Modules</option>
+    <!-- Loaded dynamically -->
+  </select>
+
+  <select id="typeFilter" class="form-select w-auto" aria-label="Filter by type">
+    <option value="">All Types</option>
+    <option value="pdf">PDF</option>
+    <option value="video">Video</option>
+    <option value="link">External Link</option>
+  </select>
+</div>
 
     <!-- Student hint -->
     <div id="tutorHint" class="alert alert-info d-none" role="alert">
@@ -53,35 +67,31 @@
 
     <!-- Upload section (only for tutor/admin) -->
     <section class="mt-5">
-      <h5 class="mb-3">Upload a Resource (Tutors Only)</h5>
-      <form id="uploadForm" class="border p-3 rounded bg-white shadow-sm">
-        <div class="row g-3">
-          <div class="col-12">
-            <label for="titleInput" class="form-label">Title</label>
-            <input type="text" class="form-control" id="titleInput" required>
-          </div>
-          <div class="col-12 col-md-6">
-            <label for="typeInput" class="form-label">Type</label>
-            <select class="form-select" id="typeInput">
-              <option value="pdf">PDF</option>
-              <option value="video">Video</option>
-              <option value="link">External Link</option>
-            </select>
-          </div>
-          <div class="col-12 col-md-6">
-            <label for="fileInput" class="form-label">Upload file (PDF/Video)</label>
-            <input type="file" class="form-control" id="fileInput" accept=".pdf,video/*">
-            <div class="form-text">Leave empty if adding an external link.</div>
-          </div>
-          <div class="col-12">
-            <label for="urlInput" class="form-label">External URL</label>
-            <input type="url" class="form-control" id="urlInput" placeholder="https://example.com/my-resource">
-            <div class="form-text">Required for “External Link”. Optional for PDF/Video.</div>
-          </div>
-          <div class="col-12">
-            <button type="submit" class="btn btn-primary w-100">Upload Resource</button>
-          </div>
-        </div>
+  <h5 class="mb-3">Upload a Resource (Tutors Only)</h5>
+  <form id="uploadForm" class="border p-3 rounded bg-white shadow-sm">
+    <div class="row g-3">
+      <div class="col-12">
+        <label for="titleInput" class="form-label">Title</label>
+        <input type="text" class="form-control" id="titleInput" required>
+      </div>
+
+      <!-- Module select for upload -->
+      <div class="col-12 col-md-6">
+        <label for="moduleInput" class="form-label">Module</label>
+        <select class="form-select" id="moduleInput">
+          <option value="">Select module</option>
+          <!-- Options injected by JS (same list as filter) -->
+        </select>
+      </div>
+
+      <div class="col-12 col-md-6">
+        <label for="typeInput" class="form-label">Type</label>
+        <select class="form-select" id="typeInput">
+          <option value="pdf">PDF</option>
+          <option value="video">Video</option>
+          <option value="link">External Link</option>
+        </select>
+      </div>
       </form>
     </section>
   </main>
@@ -95,23 +105,25 @@
       </div>
       <div class="toast-body" id="clToastBody"></div>
     </div>
-  </div>
+  <!-- 1) Local env (must exist) -->
+    <script src="../assets/js/env.js"></script>
 
-  <!-- ✅ JavaScript (this is the section you were missing) -->
-  <script src="../assets/js/env.js"></script> <!-- Local keys (ignored in git); env.example.js committed -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script>
-    // Create Supabase client early for resources.js
-    window.supabase = supabase.createClient(
-      window.__ENV.SUPABASE_URL,
-      window.__ENV.SUPABASE_ANON_KEY
-    );
-  </script>
+    <!-- 2) Supabase SDK -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-  <!-- Bootstrap Bundle (for toast + collapse) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- 3) Create client BEFORE your code runs -->
+<script>
+  window.supabase = supabase.createClient
+  (
+    window.__ENV.SUPABASE_URL,
+    window.__ENV.SUPABASE_ANON_KEY
+  );
+</script>
 
-  <!-- Your logic -->
-  <script src="../assets/js/resources.js" defer></script>
+<!-- 4) Bootstrap (for toasts/collapse) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- 5) Your page logic -->
+<script src="../assets/js/resources.js" defer></script>
 </body>
 </html>
